# PDF-Audio-Converter

./: README.md  pyproject.toml  readme.md
src/pdf_audio_converter/: __init__.py  config.py  gui.py  logger.py  main.py  stt.py  tts.py  utils.py
tests/: test_smoke.py
